--- a/index.html
+++ b/index.html
@@ -38,6 +38,17 @@
     <div id="menuBtn">
         <img src="images/menu.png" id="menu">
     </div>
+<!--FEATURES-->
+<section id="feature">
+    <div class="title-text">
+        <p>FEATURES</p>
+        <H1>Why Choose Us</H1>
+
+    </div>
+</section>
+    
+
+
     <script>
         var menuBtn = document.getElementById("menuBtn")
         var sideNav = document.getElementById("sideNav")
